added the vm option on the pom.xml